2002-02-26 lbell <lbell@tsc4.com>

	Reviewed by Naba Kumar <kh_naba@users.sourceforge.net>
	* src/preferences_gui.c:
	Removed an incorrect use of gtk_misc_set_alignment().
	
	* src/anjuta.c, src/anjuta.h, src/controls.c, src/main.c,
	src/main_menubar.c, src/mainmenu_callbacks.c, src/preferences.c,
	src/preferences.h, src/preferences_gui.c:
	
	Added the option to reload last open project at the startup.
	Added the possibility to open a new project without close
	an existing one
	
	* src/properties.cxx:
	Corrected a spelling mistake in message string.
	
	* src/session.c:
	Updated session functions.
	   
2002-02-26  Naba Kumar <kh_naba@users.sourceforge.net>

	* widgets/gnomefilelist.c: Bug fixes.
	
	Patch from Philip Van Hoof <freax@pandora.be>
	
2002-02-25  Naba Kumar <kh_naba@users.sourceforge.net>

	* src/an_file_view.c:
	anjuta was unable to open some files becuase they were not being
	recognized as "text/*" mime type (example files *.rej, *.in, etc.).
	Removed mime checking when opeining with anjuta, becuase it doesn't
	hurt to open binary files in anjuta (some even may want to do so).
	
	Added a warning when mime type is not set when "view with default
	viewer" is activated.
	
	* src/an_file_view.c, an_symbol_view.c:
	Converted N_() to _() where ever appropriate in the strings.
	
2002-02-25  Johannes Schmid <clubfan@users.sourceforge.net>
	
	* src/appwizard_gui.c, src/appwizard_cbs.c
	  src/wizard_gui.c/h, src/appwiz_page3.c,
	  src/project_import_gui.c:
	  
	Moved target type radiobuttons to appwiz. page 2
	
	* src/message-manager-private.cc
	Fixed a bug which caused a crash if next message function was used

	Reviewed by Naba Kumar <kh_naba@users.sourceforge.net>.

2002-02-25  Naba Kumar <kh_naba@users.sourceforge.net>

	* src/anjuta.h, anjuta.c, anjuta_cbs.c:
	Modifies the behaviour of Alt-TAB in Anjuta. This
	brings a behaviour similar to VC6 Alt-TAB, by maintaining the recently
	edited files in the first items of the notebook.
